[gd_scene load_steps=13 format=3 uid="uid://dkuw76bg4at2b"]

[ext_resource type="Script" path="res://Scripts/EnemyScripts/enemy_elite.gd" id="1_850sp"]
[ext_resource type="PackedScene" uid="uid://bb6eeb5442fp7" path="res://Scenes/EnemyScenes/enemy_bullet.tscn" id="2_3e1lo"]
[ext_resource type="PackedScene" uid="uid://blwb5kc6qkmlb" path="res://Assets/Explosion/Explosion.tscn" id="3_fdvqo"]
[ext_resource type="Texture2D" uid="uid://bhii8a3v57j6n" path="res://Assets/Enemy Assets/EvilElite.png" id="4_jt471"]
[ext_resource type="Texture2D" uid="uid://cl3eh10eyurxg" path="res://Assets/Enemy Assets/ElitePropellant1.png" id="5_l585s"]
[ext_resource type="Texture2D" uid="uid://ivhh8nmvytpd" path="res://Assets/Enemy Assets/ElitePropellant2.png" id="6_f1ttp"]
[ext_resource type="AudioStream" uid="uid://dg55vl7x8opay" path="res://Sounds/DefiniteShot.wav" id="7_1bf7v"]
[ext_resource type="Texture2D" uid="uid://c2ivk1u0ucbho" path="res://Assets/Enemy Assets/ElitePropellant3.png" id="7_oq6ds"]
[ext_resource type="AudioStream" uid="uid://1x4bywne5h6w" path="res://Sounds/laserexp2.mp3" id="8_v13nd"]
[ext_resource type="AudioStream" uid="uid://bj5njjahf6mv8" path="res://Sounds/AccessDeniedNow.wav" id="9_ymr6k"]

[sub_resource type="SpriteFrames" id="SpriteFrames_01k2d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_l585s")
}, {
"duration": 1.0,
"texture": ExtResource("6_f1ttp")
}, {
"duration": 1.0,
"texture": ExtResource("7_oq6ds")
}],
"loop": true,
"name": &"Elite Propellant",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pm23s"]
size = Vector2(10, 8)

[node name="EnemyElite" type="Node2D" groups=["Enemy"]]
scale = Vector2(3, 3)
script = ExtResource("1_850sp")
enemy_speed = 50
fire_rate = 0.5
enemy_bullet_scene = ExtResource("2_3e1lo")
explosion = ExtResource("3_fdvqo")

[node name="EvilShip" type="Sprite2D" parent="."]
texture = ExtResource("4_jt471")

[node name="Propellant" type="AnimatedSprite2D" parent="."]
position = Vector2(30, 0)
sprite_frames = SubResource("SpriteFrames_01k2d")
animation = &"Elite Propellant"
autoplay = "Elite Propellant"
frame_progress = 0.082472
speed_scale = 1.5

[node name="Bullet" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.333333, 0)
shape = SubResource("RectangleShape2D_pm23s")

[node name="EnemyShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_1bf7v")
volume_db = -2.0
bus = &"Sound"

[node name="EnemyDestroyed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_v13nd")
bus = &"Sound"

[node name="EnemyHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ymr6k")
bus = &"Sound"

[node name="Gun" type="Node2D" parent="."]
position = Vector2(0, -9)

[node name="Gun2" type="Node2D" parent="."]
position = Vector2(0, 9)

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="timeout" from="Bullet" to="." method="_on_bullet_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
